2017-12-15  Sam Steingold  <sds@gnu.org>

	Most of the PARI interface functions are generated automatically.
	* modules/pari/desc2lisp.lisp: New file, read
	$datadir/pari/pari.desc and emi pari-call-out forms.
	* modules/pari/pari.lisp: Remove most of pari-call-out forms and
	use desc2lisp to interface to most of the GP functions.

2017-12-15  Bruno Haible  <bruno@clisp.org>

	Fix configure failure with some shells (regression from 2017-12-04).
	Reported by Blake McBride <blake@mcbride.name>.
	* configure: Don't use unportable 'pipefail' shell feature. Use
	explicit failure test for the ${MAKE} commands instead.

2017-12-11  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexp.lisp (regexp-split): Respect the :END argument.

2017-12-10  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): Revert the 2017-11-22 fix for bug#375.

2017-12-08  Sam Steingold  <sds@gnu.org>

	Ensure that all positional args are in *ARGS* when compiling.
	* spvw.d (push_to_args): Extract from ...
	(main_actions): Call push_to_args() on argv_execute_args when
	compiling in addition to when scripting
	* makemake.in (check-script): Test that.

2017-12-07  Jerry James  <loganjerry@gmail.com>
	    Sam Steingold  <sds@gnu.org>

	Avoid -Wunsequenced / -Wsequence-point warnings (subsumes patch#54).
	* modules/clx/new-clx/clx.f (STANDARD_XID_OBJECT_LOOK)
	(STANDARD_PTR_OBJECT_LOOK): Avoid multiple popSTACK()s in a single
	expression by creating a separate statement for each.
	* modules/rawsock/rawsock.c (RAWSOCK:GETADDRINFO): Likewise.
	* modules/syscalls/calls.c (POSIX:MKNOD): Likewise.

2017-12-06  Sam Steingold  <sds@gnu.org>

	* emacs/d-mode.el (d-extra-keywords): Add "unused".
	* array.d, encoding.d, foreign.d, funarg.d, io.d, pathname.d,
	* sequence.d, socket.d, spvw.d, spvw_garcol.d, spvw_garcol_old.d,
	* spvw_mmap.d, spvw_sigint.d, spvw_sigpipe.d, spvw_sigsegv.d,
	* spvw_sigwinch.d, stream.d, time.d, gctrigger.c: Code cleanup:
	use "unused(V)" instead of "(void)V".
